--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="/styles/error.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/styles/contact-us.css">
+    <link rel="stylesheet" href="/styles/news.css">
     <title>Crossfit</title>
     <style>
         .crossfit-loader {
