news page modification

--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,10 +8,17 @@
   </div>
 
   <div class="news-grid" id="news-grid">
-  </div>
+    </div>
+
   <div class="loader-container" id="loader">
     <div class="spinner"></div>
     <p>Loading News...</p>
   </div>
+
+  <div style="text-align: center; margin-top: 2rem; font-size: 0.9rem;">
+    <a href="https://newsapi.org" target="_blank" style="color: var(--text-secondary);">Powered by NewsAPI</a>
+  </div>
+
 </main>
+
 <script src="/script/news_script.js"></script>
