--- a/public/styles/card_game.css
+++ b/public/styles/card_game.css
@@ -34,6 +34,7 @@
 .card-game h1 {
     margin-top: 30px;
     font-size: 2.5rem;
+    color:#ffffff;
 }
 
 .score-board {
@@ -306,4 +307,76 @@ h1 {
 /* 3. Add 'updated' class to the #score element */
 #score.updated {
   animation: scoreUpdate 0.7s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .card-game h1{
+    font-size: 1.5rem;
+  }
+
+  .arena {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .card {
+    width: 140px;
+    height: 200px;
+  }
+
+  .deck {
+    width: 140px;
+    height: 200px;
+  }
+
+  .player-avatar{
+    width: 80px;
+    height: 80px;
+  }
+  .player-img{
+    width:40px;
+    height: 40px;
+  }
+  .stat {
+    font-size: 12px;
+    font-weight: 130;
+  }
+
+  .player-name {
+    font-size: 1.1rem;
+  }
+
+  .card-count {
+    font-size: 0.85rem;
+    padding: 4px 8px;
+  }
+
+  .buttons button {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+
+  .score-board {
+    font-size: 0.7rem;
+  }
+
+  h1 {
+    font-size: 1rem;
+  }
+
+  .table {
+    flex-direction: row;
+    align-items: center;
+    padding: 0 20px;
+  }
+
+  .player-area {
+    width: 100%;
+    transform: none;
+  }
+
+  #card-right {
+    transform: none;
+  }
 }
